Fixed extra whitespace, everything is centered
Had to set left margin to 0px

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,12 @@
 html, body {
   background-color: #3d3d3d;
-  margin: 600px;
+  margin: 300px;
   padding: 0px;
-  width: 100%;
 }
 
 #content {
   background-color: #333333;
-  margin: 30px 200px 0px 200px;
+  margin: 30px 200px 0px 0px;
   padding: 50px;
   color: white;
   width: 100%;
